welcome.lessons.welcome.variables.Variables.scala.error
Variables:35: error: not found: value reculer
	reculer();
        ^