welcome.lessons.welcome.variables.Variables.scala.code
/*var nbPas:Int = 0;
var dejaFait:Int = 0;
 
 
 while(dejaFait != nbPas){	
 avance();
 dejaFait = dejaFait+1;
 }
 prendBiscuit();
  while(dejaFait != nbPas){	
 recule();
 }
 poseBiscuit();
  nbPas = nbPas + 1;
  */
 var nbPas:Int = 0;
 var dejaFait:Int = 0;
 while(nbPas < 7)
 {
 	
  while(!estSurBiscuit())
  {

	avance();
	dejaFait = dejaFait + 1;
  	
  }
  
  prendBiscuit();

	while(dejaFait >= 0)
	{
	
	reculer();
		
	}
  
  
 }